SubBt/force-app/main/default/objects/Project_Selection_Sheet_Takeoff__c/Project_Selection_Sheet_Takeoff__c.object-meta.xml
<CustomObject>
    <label>Bill of Material</label>
    <nameField>
        <displayFormat>BOM #{00000}</displayFormat>
        <label>BOM #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bill of Materials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>