SubBt/force-app/main/default/objects/Project_Selection_Sheet_Takeoff__c/fields/BT_Quote__c.field-meta.xml
<CustomField>
    <fullName>BT_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BT Quote</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Bill of Materials</relationshipLabel>
    <relationshipName>Bill_of_Materials</relationshipName>
    <type>Lookup</type>
</CustomField>