SubBt/force-app/main/default/objects/Project_Selection_Sheet_Takeoff__c/fields/CCIP__c.field-meta.xml
<CustomField>
    <fullName>CCIP__c</fullName>
    <label>CCIP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>