SubBt/force-app/main/default/objects/Project_Selection_Sheet_Takeoff__c/fields/Edge__c.field-meta.xml
<CustomField>
    <fullName>Edge__c</fullName>
    <label>Edge</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>