SubBt/force-app/main/default/objects/Project_Selection_Sheet_Takeoff__c/fields/Fab_Only_Rate__c.field-meta.xml
<CustomField>
    <fullName>Fab_Only_Rate__c</fullName>
    <label>Fabrication Only Rate</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>