SubBt/force-app/main/default/objects/Project_Selection_Sheet_Takeoff__c/fields/Fabrication_Install_Rate__c.field-meta.xml
<CustomField>
    <fullName>Fabrication_Install_Rate__c</fullName>
    <label>Fabrication and Install Rate</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>