SubBt/force-app/main/default/objects/Project_Selection_Sheet_Takeoff__c/fields/Fabrication_Labor_Mark_up__c.field-meta.xml
<CustomField>
    <fullName>Fabrication_Labor_Mark_up__c</fullName>
    <label>Fabrication / Labor Mark-up %</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>