SubBt/force-app/main/default/objects/Project_Selection_Sheet_Takeoff__c/fields/Fabrication_Labor_Mark_up_LongText__c.field-meta.xml
<CustomField>
    <fullName>Fabrication_Labor_Mark_up_LongText__c</fullName>
    <label>Fabrication/Labor Mark-up</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>