SubBt/force-app/main/default/objects/Project_Selection_Sheet_Takeoff__c/fields/General_Liability_Insurance_Long__c.field-meta.xml
<CustomField>
    <fullName>General_Liability_Insurance_Long__c</fullName>
    <label>General Liability Insurance</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>