SubBt/force-app/main/default/objects/Project_Selection_Sheet_Takeoff__c/fields/Install_Only__c.field-meta.xml
<CustomField>
    <fullName>Install_Only__c</fullName>
    <label>Install Only</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>