SubBt/force-app/main/default/objects/Project_Selection_Sheet_Takeoff__c/fields/Mark_Up_Non_Slab_or_Labor__c.field-meta.xml
<CustomField>
    <fullName>Mark_Up_Non_Slab_or_Labor__c</fullName>
    <label>Mark Up (Non Slab) or (Labor)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>