SubBt/force-app/main/default/objects/Project_Selection_Sheet_Takeoff__c/fields/Miscellaneous_Rates__c.field-meta.xml
<CustomField>
    <fullName>Miscellaneous_Rates__c</fullName>
    <label>Miscellaneous Rates</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>