SubBt/force-app/main/default/objects/Project_Selection_Sheet_Takeoff__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>BOM Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>