SubBt/force-app/main/default/objects/Project_Selection_Sheet_Takeoff__c/fields/OCIP_CCIP__c.field-meta.xml
<CustomField>
    <fullName>OCIP_CCIP__c</fullName>
    <label>OCIP/CCIP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>