SubBt/force-app/main/default/objects/Project_Selection_Sheet_Takeoff__c/fields/OCIP_CCIP_Required__c.field-meta.xml
<CustomField>
    <fullName>OCIP_CCIP_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OCIP/CCIP Required</label>
    <type>Checkbox</type>
</CustomField>