SubBt/force-app/main/default/objects/Project_Selection_Sheet_Takeoff__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Bill of Materials</relationshipLabel>
    <relationshipName>Bill_of_Materials</relationshipName>
    <type>Lookup</type>
</CustomField>