SubBt/force-app/main/default/objects/Project_Selection_Sheet_Takeoff__c/fields/Options_Rate__c.field-meta.xml
<CustomField>
    <fullName>Options_Rate__c</fullName>
    <label>Options Rate</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>