SubBt/force-app/main/default/objects/Project_Selection_Sheet_Takeoff__c/fields/Region_State_Country_County__c.field-meta.xml
<CustomField>
    <fullName>Region_State_Country_County__c</fullName>
    <label>Region: - State/Country/County</label>
    <length>50</length>
    <type>Text</type>
</CustomField>