SubBt/force-app/main/default/objects/Project_Selection_Sheet_Takeoff__c/fields/Slab_Discount_Rate_LongText__c.field-meta.xml
<CustomField>
    <fullName>Slab_Discount_Rate_LongText__c</fullName>
    <label>Slab Discount Rate</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>