SubBt/force-app/main/default/objects/Project_Selection_Sheet_Takeoff__c/fields/Takeoff__c.field-meta.xml
<CustomField>
    <fullName>Takeoff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Takeoff</label>
    <referenceTo>Project_Takeoff__c</referenceTo>
    <relationshipName>Product_Options</relationshipName>
    <type>Lookup</type>
</CustomField>