SubBt/force-app/main/default/objects/Project_Selection_Sheet_Takeoff__c/fields/TakeOff_Date__c.field-meta.xml
<CustomField>
    <fullName>TakeOff_Date__c</fullName>
    <formula>Takeoff__r.TakeOff_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TakeOff Date</label>
    <type>Date</type>
</CustomField>