SubBt/force-app/main/default/objects/Project_Selection_Sheet_Takeoff__c/fields/TakeOff_Description__c.field-meta.xml
<CustomField>
    <fullName>TakeOff_Description__c</fullName>
    <formula>Takeoff__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TakeOff Description</label>
    <type>Text</type>
</CustomField>