SubBt/force-app/main/default/objects/Project_Selection_Sheet_Takeoff__c/fields/Tax_on_Fabrication_Required__c.field-meta.xml
<CustomField>
    <fullName>Tax_on_Fabrication_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax on Fabrication</label>
    <type>Checkbox</type>
</CustomField>