SubBt/force-app/main/default/objects/Project_Selection_Sheet_Takeoff__c/fields/Tax_Rate_2__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate_2__c</fullName>
    <label>Labor Only Sales Tax</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>