SubBt/force-app/main/default/objects/Project_Selection_Sheet_Takeoff__c/fields/Textura_Fee__c.field-meta.xml
<CustomField>
    <fullName>Textura_Fee__c</fullName>
    <label>Textura Fee</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>