SubBt/force-app/main/default/objects/Project_Selection_Sheet_Takeoff__c/fields/Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Version_Number__c</fullName>
    <label>Version Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>