SubBt/force-app/main/default/objects/Project_Selection_Sheet_Takeoff__c/fields/Workers_Comp__c.field-meta.xml
<CustomField>
    <fullName>Workers_Comp__c</fullName>
    <label>Workers Comp</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>