SubBt/force-app/main/default/objects/Project_Selection_Sheet_Takeoff__c/validationRules/Tax_Rate_2_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Tax_Rate_2_Required</fullName>
    <active>false</active>
    <description>Tax rate 2 cannot be zero when Tax Fabrication is required</description>
    <errorConditionFormula>AND(Tax_on_Fabrication_Required__c  = true, Tax_Rate_2__c  = 0 )</errorConditionFormula>
    <errorMessage>&apos;Tax Rate 2&apos; Cannot be Zero when &apos;Tax Fabrication&apos; is required</errorMessage>
</ValidationRule>