SubBt/force-app/main/default/objects/Project_Selection_Sheet_Takeoff__c/validationRules/Version_supports_numbers_only.validationRule-meta.xml
<ValidationRule>
    <fullName>Version_supports_numbers_only</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(REGEX( Version_Number__c ,&quot;^[.0-9_]*$&quot;))</errorConditionFormula>
    <errorMessage>Enter a valid number</errorMessage>
</ValidationRule>